Finish first design

--- a/index.html
+++ b/index.html
@@ -31,28 +31,28 @@
         <div class="field">
             <label class="label">First Name</label>
             <div class="control">
-                <input class="input inp is-info" type="text" placeholder="Text input">
+                <input class="input inp is-info" type="text" placeholder="ex. John">
             </div>
         </div>
         
         <div class="field">
             <label class="label">Last Name</label>
             <div class="control">
-                <input class="input inp is-info" type="text" placeholder="Text input">
+                <input class="input inp is-info" type="text" placeholder="ex. Doe">
             </div>
         </div>
 
         <div class="field">
             <label class="label">Phone Number</label>
             <div class="control">
-                <input class="input inp is-info" type="number" placeholder="Text input">
+                <input class="input inp is-info" type="text" placeholder="Text input">
             </div>
         </div>
 
         <div class="field">
             <label class="label">Email</label>
             <div class="control">
-                <input class="input inp is-info" type="email" placeholder="Text input">
+                <input class="input inp is-info" type="text" placeholder="Text input">
             </div>
         </div>
 
@@ -87,14 +87,59 @@
         <div class="field">
             <label class="label">Education</label>
             <div class="control">
-                <input class="input inp is-info" type="text" placeholder="Text input">
+                    <textarea class="textarea inp is-info" placeholder="Info textarea"></textarea>
+            </div>
+        </div>
+
+        <div class="field">
+            <label class="label">Project 1</label>
+            <div class="control">
+                <textarea class="textarea inp is-info" placeholder="Info textarea"></textarea>
+            </div>
+        </div>
+        <div class="field">
+            <label class="label">Project 2</label>
+            <div class="control">
+                <textarea class="textarea inp is-info" placeholder="Info textarea"></textarea>
+            </div>
+        </div>
+        <div class="field">
+            <label class="label">Project 3</label>
+            <div class="control">
+                <textarea class="textarea inp is-info" placeholder="Info textarea"></textarea>
+            </div>
+        </div>
+
+        <div class="field">
+            <label class="label">Experience 1</label>
+            <div class="control">
+                <textarea class="textarea inp is-info" placeholder="Info textarea"></textarea>
+            </div>
+        </div>
+        <div class="field">
+            <label class="label">Experience 2</label>
+            <div class="control">
+                <textarea class="textarea inp is-info" placeholder="Info textarea"></textarea>
+            </div>
+        </div>
+        <div class="field">
+            <label class="label">Experience 3</label>
+            <div class="control">
+                <textarea class="textarea inp is-info" placeholder="Info textarea"></textarea>
+            </div>
+        </div>
+
+        <div class="field">
+            <label class="label">Military</label>
+            <div class="control">
+                <textarea class="textarea inp is-info" placeholder="Info textarea"></textarea>
             </div>
         </div>
 
 
 
         
-        <button class="button" id="submit">Build Resume</button>
+        <button class="button is-info" id="submit">Build Resume</button>
     </div>
     <script src="script.js"></script>
 </body>
